# tile-game

./: .gitignore  AGENTS.md  README.md
raylib-my/: CMakeLists.txt
raylib-my/config/: config.json
raylib-my/docs/: CODE_ORGANIZATION.md  SERVICE_LOCATOR.md  class_diagram.md  classes.iuml  component_architecture.md  config.md  game_interface_sorting.md  grph_camera_system.md  service_locator.md  test_mermaid.md  test_plantuml.md  world_persistance_service.md  world_persistence_service.md
raylib-my/docs/design_book/: notes.md
raylib-my/docs/tasks/: index.md  task-01-cpp-includes.md  task-02-memory-management.md  task-03-gameobject-interface.md  task-04-component-ownership.md  task-05-abstract-raylib.md  task-06-error-handling.md  task-07-tilesmanager-pattern.md  task-08-state-separation.md  task-09-configuration.md  task-10-input-consumption.md  task-11-abstraction-layers.md  task-12-extensibility.md  task-13-sorting-optimization.md  task-14-spatial-partitioning.md  task-15-world-save-load.md
raylib-my/src/: CMakeLists.txt  game.cpp  game_camera.cpp  game_camera.h  game_interface.cpp  game_interface.h  game_interface_.cpp  game_world.cpp  game_world.h  graphics.cpp  graphics.h
raylib-my/src/common/: base64.cpp  base64.h  color_2d.cpp  color_2d.h  game_area.cpp  game_area.h  game_error.cpp  game_error.h  game_object.cpp  game_object.h  grph_camera.cpp  grph_camera.h  image_handle.cpp  image_handle.h  json_require.h  keyboard_2d.h  position_2d.cpp  position_2d.h  rectangle_2d.cpp  rectangle_2d.h  texture_handle.cpp  texture_handle.h
raylib-my/src/config/: game_config.cpp  game_config.h
raylib-my/src/graphics/: collision_system.h  input_system.h  raylib_graphics.cpp  raylib_graphics.h  render_system.h  resources_system.h
raylib-my/src/graphics_components/: camera_component.cpp  camera_component.h  component.cpp  component.h  empty_component.cpp  empty_component.h  tile_component.cpp  tile_component.h  world_component.cpp  world_component.h
raylib-my/src/input_components/: camera_component.cpp  camera_component.h  component.cpp  component.h  tile_component.cpp  tile_component.h  world_component.cpp  world_component.h
raylib-my/src/managers/: tiles_manager.cpp  tiles_manager.h
raylib-my/src/menus/: decoration_menu.cpp  decoration_menu.h  factory.cpp  factory.h  menu.cpp  menu.h
raylib-my/textures/: test.blend
(+35 files in other folders)
